nullaway_error_272b58b5-0bea-43bd-a031-716924a89b60.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/behavior/StateMachine.java:42: error: [NullAway] dereferenced expression this.currentState is @Nullable
        this.currentState.enter();
                         ^
    (see http://t.uber.com/nullaway )
